body { align-items: center } fixed the issue

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
 }
 
